allow user to upvote/downvote one time
